--- a/SIADS695_clock_image.ipynb
+++ b/SIADS695_clock_image.ipynb
@@ -46,6 +46,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "HIHR9qvoyL-9"
+      },
+      "source": [
+        "hello = 'Hi'"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "CFFWMAsCyHHn"
       },
       "source": [
