Added clone bash and function to get IDs per round

--- a/SIADS695_clock_image.ipynb
+++ b/SIADS695_clock_image.ipynb
@@ -6,8 +6,8 @@
       "name": "SIADS695_clock_image.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "machine_shape": "hm",
-      "include_colab_link": true
+      "toc_visible": true,
+      "machine_shape": "hm"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +18,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/ian-byrne/MADSmilestone2/blob/main/SIADS695_clock_image.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -59,7 +49,7 @@
         "\n",
         "# URL of a single clock image from round 2 (not all image file names increment by 1): https://clockdrawingimages3.s3.us-west-1.amazonaws.com/10000003.tif"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -78,8 +68,74 @@
         "from PIL import Image\n",
         "\n"
       ],
-      "execution_count": 41,
+      "execution_count": 14,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yZvpOMW9m2Uj",
+        "outputId": "cea86278-dc50-4469-974d-acabc063d962"
+      },
+      "source": [
+        "# Clone the entire repo.\n",
+        "!git clone -l -s https://github.com/ian-byrne/MADSmilestone2.git\n",
+        "\n",
+        "# Change directory into cloned repo\n",
+        "%cd MADSmilestone2\n",
+        "\n",
+        "# List repo contents\n",
+        "!ls"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "fatal: destination path 'MADSmilestone2' already exists and is not an empty directory.\n",
+            "/content/MADSmilestone2\n",
+            "ian_testingground.ipynb  load_data.py  README.md  SIADS695_clock_image.ipynb\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SRpaumt1sJRy",
+        "outputId": "d55bc772-7164-4fb4-ce96-65566c375376"
+      },
+      "source": [
+        "import load_data\n",
+        "#load_data.load_data()\n",
+        "load_data.load_images()"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0, 0, 0, ..., 0, 0, 0],\n",
+              "       [0, 0, 0, ..., 0, 0, 0],\n",
+              "       [0, 0, 0, ..., 0, 0, 0],\n",
+              "       ...,\n",
+              "       [1, 1, 1, ..., 0, 0, 0],\n",
+              "       [1, 1, 1, ..., 0, 0, 0],\n",
+              "       [1, 1, 1, ..., 0, 0, 0]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -114,7 +170,7 @@
         "\n",
         "rounds_df = load_data()"
       ],
-      "execution_count": 162,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -131,7 +187,7 @@
         "print(rounds_df['hc1disescn9'].unique())\n",
         "rounds_df[rounds_df['cg1dclkdraw'] == '-1 Inapplicable'].head()"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +239,7 @@
         "\n",
         "rounds_clean = clean_data(rounds_df)"
       ],
-      "execution_count": 99,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -200,7 +256,7 @@
         "print(rounds_clean.cg1dclkdraw.unique())\n",
         "print(rounds_clean['hc1disescn9'].unique())"
       ],
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -236,7 +292,7 @@
         "plt.ylabel(\"Counts\")\n",
         "plt.show(b)"
       ],
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -303,7 +359,7 @@
         "   \n",
         "rounds_labeled = create_labels(rounds_clean)  "
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -360,7 +416,7 @@
         "\n",
         "rounds_labeled.label.hist() #Highly unbalanced dataset - good case for generating synthetic data to rebalance"
       ],
-      "execution_count": 204,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -383,6 +439,58 @@
           "metadata": {
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8djkzObD-T-7"
+      },
+      "source": [
+        "### Get Individual participant IDs per round\n",
+        "Could be useful for pulling in exact images per round"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eCB-a4vAsYGu",
+        "outputId": "2061ab5a-075d-48b8-bf77-e263d3d55c6a"
+      },
+      "source": [
+        "def get_ids(df):\n",
+        "  \"\"\" Creates dictionary of IDs per round\"\"\"\n",
+        "\n",
+        "  id_dict = {}\n",
+        "  for val in df['round'].unique():\n",
+        "    id_dict[val] = df[df['round'] == val]['spid'].values\n",
+        "  return id_dict\n",
+        "\n",
+        "id_rounds = get_ids(rounds_labeled)\n",
+        "id_rounds"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1: array([10000003., 10000004., 10000005., ..., 10012407., 10012410.,\n",
+              "        10012411.]),\n",
+              " 2: array([10000003., 10000007., 10000008., ..., 10012406., 10012407.,\n",
+              "        10012411.]),\n",
+              " 3: array([10001875., 10005977., 10002720., ..., 10004106., 10007223.,\n",
+              "        10011851.]),\n",
+              " 4: array([10001875., 10002720., 10004997., ..., 10004106., 10007223.,\n",
+              "        10011851.])}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
         }
       ]
     },
@@ -413,7 +521,7 @@
         "imarray = np.logical_not(np.array(im)).astype(int)\n",
         "imarray"
       ],
-      "execution_count": 206,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -450,7 +558,7 @@
         "im2 = Image.fromarray(np.array(im))\n",
         "plt.imshow(im2)"
       ],
-      "execution_count": 211,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -496,7 +604,7 @@
       "source": [
         "im2"
       ],
-      "execution_count": 210,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
