updated code with writing dictionary to file

--- a/Labeling/Cleaning_labeling.ipynb
+++ b/Labeling/Cleaning_labeling.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Cleaning_labeling.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO3Jp+MNFb/kfdxp6Iz+s33",
+      "authorship_tag": "ABX9TyPC0qGXwy9+C7fy8IVoivY0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1kZ8roTFjO0Y"
+      },
+      "source": [
+        "#Clone Repository and Load in Rounds Data\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zGUytMofhoYc",
-        "outputId": "0633ae88-3e7a-431d-a8b6-063fbc1ced8f"
+        "outputId": "0a6a9d61-6f92-4b8e-dbd9-13e37ffb6ea2"
       },
       "source": [
         "# Clone the entire repo.\n",
@@ -53,12 +62,12 @@
           "text": [
             "Cloning into 'MADSmilestone2'...\n",
             "warning: --local is ignored\n",
-            "remote: Enumerating objects: 139, done.\u001b[K\n",
-            "remote: Counting objects: 100% (139/139), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (116/116), done.\u001b[K\n",
-            "remote: Total 139 (delta 60), reused 59 (delta 17), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (139/139), 607.26 KiB | 2.33 MiB/s, done.\n",
-            "Resolving deltas: 100% (60/60), done.\n",
+            "remote: Enumerating objects: 143, done.\u001b[K\n",
+            "remote: Counting objects: 100% (143/143), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (120/120), done.\u001b[K\n",
+            "remote: Total 143 (delta 62), reused 59 (delta 17), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (143/143), 608.73 KiB | 1.71 MiB/s, done.\n",
+            "Resolving deltas: 100% (62/62), done.\n",
             "/content/MADSmilestone2\n",
             "ian_testingground.ipynb  Images.ipynb  Images.py  Labeling  Loading  README.md\n"
           ],
@@ -85,7 +94,7 @@
           "height": 487
         },
         "id": "Oun-rTP7hxaV",
-        "outputId": "21b63fc2-05b6-40e2-f8f8-9526ecc7bcbe"
+        "outputId": "1411711d-cf16-4f9e-e2ed-7aed68775aa4"
       },
       "source": [
         "import pandas as pd\n",
@@ -253,7 +262,7 @@
           "height": 561
         },
         "id": "QFvCzHPwh_Ka",
-        "outputId": "6d37e606-f497-486c-ddcc-3d46684a2eb3"
+        "outputId": "430d10ba-0354-4413-bb2b-908dd2ef2a30"
       },
       "source": [
         "print(\"Column values for clock scores: \\n\", rounds['cg1dclkdraw'].unique())\n",
@@ -380,7 +389,7 @@
           "height": 419
         },
         "id": "muUutFNyiAn6",
-        "outputId": "95386123-f89b-4e69-e638-ea558df99738"
+        "outputId": "50646f2c-4ee8-411c-f531-9d445be2241b"
       },
       "source": [
         "# Load the cleaned dataframe\n",
@@ -529,7 +538,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QoZxMd9yiCvb",
-        "outputId": "c8c29716-caf1-4b8d-9262-e199babbd227"
+        "outputId": "c96d8fdf-1017-4c61-f102-2ec5216c8650"
       },
       "source": [
         "#Check that we only have healthscores of 1, 2, 7 and subjects that have drawn clocks\n",
@@ -564,7 +573,7 @@
           "height": 770
         },
         "id": "hLa7vIiRiFB5",
-        "outputId": "b49b2fd7-bcd6-4053-fa14-10fef409370a"
+        "outputId": "6d94929f-8e6e-415e-d68e-a7534ec62811"
       },
       "source": [
         "# Check balance of dataset\n",
@@ -621,10 +630,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 419
+          "height": 521
         },
         "id": "-kLcAS67iGuL",
-        "outputId": "d0196814-4881-45c7-b39e-7357208777ed"
+        "outputId": "b821ec04-445f-4459-e543-fbad7335b7c0"
       },
       "source": [
         "labeled_data = ld.create_labels(cleaned_rounds)\n",
@@ -785,7 +794,7 @@
           "height": 282
         },
         "id": "k3qRf4kniK5_",
-        "outputId": "4d86b32e-f887-4482-d676-a2c43e571951"
+        "outputId": "135e0c98-d955-48fc-dc5d-6085631c096a"
       },
       "source": [
         "# Look at distribution of labels\n",
@@ -797,7 +806,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fd0802eda10>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f613f8f3fd0>"
             ]
           },
           "metadata": {},
@@ -835,13 +844,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LPeCooHQiM_k",
-        "outputId": "061cde75-319f-413f-ba6e-681f0837d7ac"
+        "outputId": "6e4a64c4-6864-4915-e7f0-6363d4a228e5"
       },
       "source": [
         "ids = ld.get_ids(labeled_data)\n",
         "ids[1]['10000003'] "
       ],
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -851,7 +860,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 10
         }
       ]
     },
@@ -859,6 +868,24 @@
       "cell_type": "code",
       "metadata": {
         "id": "rz84zNjIiRpw"
+      },
+      "source": [
+        "# Writing dictionary to text file\n",
+        "try:\n",
+        "    id_file = open('roundIdLabelDict.txt', 'wt')\n",
+        "    id_file.write(str(ids))\n",
+        "    id_file.close()\n",
+        "  \n",
+        "except:\n",
+        "    print(\"Unable to write to file\")"
+      ],
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4eIpG3gBkUvJ"
       },
       "source": [
         ""
