updated with loading dictionary txt file

--- a/Images.ipynb
+++ b/Images.ipynb
@@ -29,7 +29,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "h9sukXLSAVye"
+        "id": "h9sukXLSAVye",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "eddae536-6696-4fca-9793-bdfe5bd5ef62"
       },
       "source": [
         "# Clone the entire repo.\n",
@@ -41,8 +45,25 @@
         "# List repo contents\n",
         "!ls"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'MADSmilestone2'...\n",
+            "warning: --local is ignored\n",
+            "remote: Enumerating objects: 161, done.\u001b[K\n",
+            "remote: Counting objects: 100% (161/161), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (136/136), done.\u001b[K\n",
+            "remote: Total 161 (delta 73), reused 65 (delta 19), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (161/161), 666.11 KiB | 4.76 MiB/s, done.\n",
+            "Resolving deltas: 100% (73/73), done.\n",
+            "/content/MADSmilestone2\n",
+            "ian_testingground.ipynb  Images.ipynb  Images.py  Labeling  Loading  README.md\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -66,7 +87,22 @@
         "import io\n",
         "import requests\n",
         "from PIL import Image\n",
-        "import Images \n"
+        "import Images # Contains functions: get_images_test(), get_coordinates(), viz_image()\n"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-5dka6mI2i7E"
+      },
+      "source": [
+        "# Read round, id, label dictionary file\n",
+        "\n",
+        "r_id_labl = open(\"Labeling/roundIdLabelDict.txt\", \"r\")\n",
+        "print(r_id_labl.readline())\n",
+        "r_id_labl.close()"
       ],
       "execution_count": null,
       "outputs": []
